# rats

./: .gitignore  Cargo.toml  README.md
src/: applicative.rs  context.rs  conversions.rs  erased.rs  foldable.rs  function_k.rs  functor.rs  hkt.rs  id.rs  kind.rs  kinds.rs  lib.rs  lifted.rs  mod.rs  monad.rs  monoid.rs  scratch.rs  semigroup.rs  trampoline.rs  traverse.rs
src/data/: either_t.rs  future_a.rs  id.rs  kleisli.rs  mod.rs  option_t.rs
src/instances/: future.rs  id.rs  iterator.rs  mod.rs  monoids.rs  option.rs  option_t.rs  result.rs  semigroups.rs  vec.rs  vec_deque.rs
src/kinds/: custom_kind.rs  mod.rs  option_t.rs  vec.rs
src/old/sandbox/: lazy.rs  lazy8.rs  lifted2.rs  lifted3.rs  lifted4.rs  mod.rs  scratch.rs
src/old/tests/: custom_kind.rs
src/old/v1/: kind.rs  monad.rs  traverse.rs
src/old/v1/instances/: vec.rs
src/old/v1/kinds/: mod.rs
src/old/v2/: functor.rs  mod.rs
src/old/v2/instances/: mod.rs  option.rs  vec.rs
src/sandbox/: almost_working_no_enums.rs  ast.rs  generator.rs  lazy2.rs  lazy3.rs  lazy4.rs  lazy5.rs  lazy7.rs  lazy8.rs  lifted.rs  lifted2.rs  lifted3.rs  scratch.rs
src/sandbox/lazy6/: mod.rs  more_nodes.rs  nodes.rs
src/tests/: custom_kind.rs  mod.rs
src/v1/: context.rs  function_k.rs  functor.rs  kind.rs  kinds.rs  mod.rs  traverse.rs
src/v1/data/: mod.rs
src/v1/instances/: result.rs
src/v2/: applicative.rs  conversions.rs  erased.rs  functor.rs  hkt.rs  kind.rs  mod.rs  yieldable.rs  yielder.rs
src/v2/instances/: vec.rs
src/v2/kinds/: mod.rs  vec.rs
src/v2/lifted/: mod.rs
